--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>FitApp - Mobile App HTML Template</title>
+        <title>Prismike's Project</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon" />
+        <link href="./img/logo tectrail.jpeg" rel="icon" />
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,6 +40,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
+        
     </head>
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
@@ -65,7 +66,7 @@
                     class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
                 >
                     <a href="" class="navbar-brand p-0">
-                        <h1 class="m-0">FitApp</h1>
+                        <h1 class="m-0">Prismike's Project</h1>
                         <!-- <img src="img/logo.png" alt="Logo"> -->
                     </a>
                     <button
@@ -78,14 +79,14 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto py-0">
-                            <a href="#" class="nav-item nav-link active"
+                            <a href="./index.html" class="nav-item nav-link active"
                                 >Home</a
                             >
-                            <a href="./about.html" class="nav-item nav-link"
+                            <a href="./about.html" class="nav-item nav-link active"
                                 >About</a
                             >
 
-                            <a href="./portfolio.html" class="nav-item nav-link"
+                            <a href="./portfolio.html" class="nav-item nav-link active"
                                 >Portfolio</a
                             >
                         </div>
@@ -104,10 +105,11 @@
                                 <h1
                                     class="text-white mb-4 animated slideInDown"
                                 >
-                                    Welcome to my page!!!
+                                    Welcome To My Page
                                 </h1>
                                 <p class="text-white pb-3 animated slideInDown">
-                                    I'm a software developer.
+                                   Hello there!
+                                    I'm a Front-end Developer.<br> I Love exploring and creating--I'm a Lifelong Learner...
                                 </p>
                                 <a
                                     href="about.html"
@@ -121,33 +123,33 @@
                                 >
                             </div>
                             <div
-                                class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp"
+                                class="col-lg-4 d-flex justify-content-between justify-content-lg-around wow fadeIn"
                                 data-wow-delay="0.3s"
                             >
                                 <div class="owl-carousel screenshot-carousel">
                                     <img
                                         class="img-fluid"
-                                        src="img/screenshot-1.png"
+                                        src="img/pic 1.jpg"
                                         alt=""
                                     />
                                     <img
                                         class="img-fluid"
-                                        src="img/screenshot-2.png"
+                                        src="img/pic 3.jpg"
                                         alt=""
                                     />
                                     <img
                                         class="img-fluid"
-                                        src="img/screenshot-3.png"
+                                        src="img/pic 4.jpg"
                                         alt=""
                                     />
                                     <img
                                         class="img-fluid"
-                                        src="img/screenshot-4.png"
+                                        src="img/pic 2.jpg"
                                         alt=""
                                     />
                                     <img
                                         class="img-fluid"
-                                        src="img/screenshot-5.png"
+                                        src="img/pic 5.jpg"
                                         alt=""
                                     />
                                 </div>
@@ -167,72 +169,48 @@
                             data-wow-delay="0.1s"
                         >
                             <h5 class="text-primary-gradient fw-medium">
-                                Screenshot
-                            </h5>
+                                Hello There !!!
+                             </h5>
                             <h1 class="mb-4">
-                                User Friendly interface And Very Easy To Use
-                                Fitness App
+                                I'm Super Excited To Walk You Through My Learning Journey...
                             </h1>
                             <p class="mb-4">
-                                Diam dolor diam ipsum et tempor sit. Aliqu diam
-                                amet diam et eos labore. Clita erat ipsum et
-                                lorem et sit, sed stet no labore lorem sit clita
-                                duo justo eirmod magna dolore erat amet
-                            </p>
-                            <p>
-                                <i
-                                    class="fa fa-check text-primary-gradient me-3"
-                                ></i
-                                >Diam dolor diam ipsum et tempor sit
-                            </p>
-                            <p>
-                                <i
-                                    class="fa fa-check text-primary-gradient me-3"
-                                ></i
-                                >Aliqu diam amet diam et eos labore
+                              Hertechtrail Academy is the heart of Hertechtrail. A 100% virtual learning platform for women in Africa. 
+                              As an individual I was granted this scholarship into one of it's programs, Web Development Starter. 
+                              I developed high quality and dynamic web applications with tools such as;   
                             </p>
                             <p class="mb-4">
                                 <i
                                     class="fa fa-check text-primary-gradient me-3"
                                 ></i
-                                >Clita erat ipsum et lorem et sit
+                                >Version Control with Git and Github
                             </p>
+                            <p class="mb-4">
+                                <i
+                                    class="fa fa-check text-primary-gradient me-3"
+                                ></i
+                                >JavaScript (operator, object, function and array methods)
+                            </p>
+                            <p class="mb-4">
+                                <i
+                                    class="fa fa-check text-primary-gradient me-3"
+                                ></i
+                                >Cascading style sheet commonly known as CSS
+                            </p>
+                            <p class="mb-4">
+                                <i
+                                    class="fa fa-check text-primary-gradient me-3"
+                                ></i
+                                >Hyper Text Mark Language With the use of VS code software.
+                             </p>
                             <a
-                                href=""
+                                href="http://127.0.0.1:5501/about.html#"
                                 class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill mt-3"
                                 >Read More</a
                             >
                         </div>
-                        <div
-                            class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp"
-                            data-wow-delay="0.3s"
-                        >
-                            <div class="owl-carousel screenshot-carousel">
-                                <img
-                                    class="img-fluid"
-                                    src="img/screenshot-1.png"
-                                    alt=""
-                                />
-                                <img
-                                    class="img-fluid"
-                                    src="img/screenshot-2.png"
-                                    alt=""
-                                />
-                                <img
-                                    class="img-fluid"
-                                    src="img/screenshot-3.png"
-                                    alt=""
-                                />
-                                <img
-                                    class="img-fluid"
-                                    src="img/screenshot-4.png"
-                                    alt=""
-                                />
-                                <img
-                                    class="img-fluid"
-                                    src="img/screenshot-5.png"
-                                    alt=""
-                                />
+                        <div>
+                            
                             </div>
                         </div>
                     </div>
@@ -252,32 +230,32 @@
                             <div class="d-flex gap-4">
                                 <p>
                                     <i class="fa fa-map-marker-alt me-3"></i>
-                                    Lagos, Nigeria
+                                    Buea, Cameroon
                                 </p>
                                 <p>
-                                    <i class="fa fa-phone-alt me-3"></i>+234
-                                    8169129560
+                                    <i class="fa fa-phone-alt me-3"></i>+237
+                                    650 393 291
                                 </p>
                                 <p>
                                     <i class="fa fa-envelope me-3"></i
-                                    >edoziemagdalene@gmail.com
+                                    >ndangprismike650@gmail.com
                                 </p>
                             </div>
 
                             <div class="d-flex pt-2 gap-3">
                                 <a
                                     class="btn btn-outline-light btn-social"
-                                    href=""
+                                    href="https://x.com/n_prismike/status/1618912965780193281?s=46&t=6V2fQOYo3eDfX2Si9G-RaQ"
                                     ><i class="fab fa-twitter"></i
                                 ></a>
                                 <a
                                     class="btn btn-outline-light btn-social"
-                                    href=""
-                                    ><i class="fab fa-facebook-f"></i
+                                    href="https://github.com/prismike?tab=repositories"
+                                    ><i class="fab fa-github-alt"></i
                                 ></a>
                                 <a
                                     class="btn btn-outline-light btn-social"
-                                    href=""
+                                    href="https://instagram.com/ndang_prismike_official?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                                     ><i class="fab fa-instagram"></i
                                 ></a>
                                 <a
@@ -297,7 +275,7 @@
                             >
                                 &copy;
                                 <a class="border-bottom" href="#"
-                                    >Hertechtrail cohort 7 project.</a
+                                    >Hertechtrail Cohort 7 Project.</a
                                 >
 
                                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
@@ -305,7 +283,7 @@
                                 <a
                                     class="border-bottom"
                                     href="https://htmlcodex.com"
-                                    >Maggy.</a
+                                    >Prismike.</a
                                 >
                             </div>
                             <div class="col-md-6 text-center text-md-end">
